--- a/src/static/index.html
+++ b/src/static/index.html
@@ -19,30 +19,19 @@
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
         </div>
-      </section>
-
-      <section id="signup-container">
-        <h3>Sign Up for an Activity</h3>
-        <form id="signup-form">
-          <div class="form-group">
-            <label for="email">Student Email:</label>
-            <input type="email" id="email" required placeholder="your-email@mergington.edu" />
-          </div>
-          <div class="form-group">
-            <label for="activity">Select Activity:</label>
-            <select id="activity" required>
-              <option value="">-- Select an activity --</option>
-              <!-- Activity options will be loaded here -->
-            </select>
-          </div>
-          <button type="submit">Sign Up</button>
-        </form>
         <div id="message" class="hidden"></div>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2023 Mergington High School</p>
+      <div class="footer-content">
+        <p>&copy; 2023 Mergington High School</p>
+        <nav class="footer-nav">
+          <a href="#activities-container">Activities</a> |
+          <a href="mailto:info@mergingtonhs.edu">Contact</a> |
+          <a href="#">Privacy Policy</a>
+        </nav>
+      </div>
     </footer>
 
     <script src="app.js"></script>
